--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.mixer54</groupId>
     <artifactId>PreventPortal</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
 
     <repositories>
         <repository>
@@ -23,4 +23,8 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 </project>
