--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: PreventPortal
-version: 1.0.0
+version: 1.1.0
 main: ru.mixer54.pp.PreventPortal
 description: Prevent Nether portal creation
-api-version: 1.15
+api-version: 1.18
+author: MiXeR54
